--- a/src/main/resources/templates/PhotoView.html
+++ b/src/main/resources/templates/PhotoView.html
@@ -48,9 +48,9 @@
 
 <footer>
     <div class="container">
-        <small th:text="${'© Copyright ' + #dates.year(#dates.createNow()) + ' PhotoContest'}">© 2024 PhotoContest</small>
+        <small th:text="${'© Copyright ' + #dates.year(#dates.createNow()) + ' PhotoContest'}">© 2024
+            PhotoContest</small>
     </div>
 </footer>
-
 </body>
 </html>
