Small change in insert_data.sql and default photo make

--- a/src/main/resources/templates/ContestCreateView.html
+++ b/src/main/resources/templates/ContestCreateView.html
@@ -28,7 +28,7 @@
 <main>
     <div class="body-content">
         <header class="header">
-            <h2 th:text="#{subtitle}">Create a new contest</h2>
+            <h2 th:text="#{subtitle2}">Create a new contest</h2>
         </header>
 
         <div class="form-container">
