--- a/src/main/resources/templates/HomeView.html
+++ b/src/main/resources/templates/HomeView.html
@@ -220,8 +220,7 @@
 
 <footer>
     <div class="container">
-        <p>&copy; 2024 Photography Contest | <a th:href="@{/privacy-policy}">Privacy Policy</a> | <a
-                th:href="@{/contact}">Contact Us</a></p>
+        <p>&copy; 2024 Photography Contest </p>
     </div>
 </footer>
 
